# bsky_ml

./: .gitignore  .ocamlformat  LICENSE  README.md  blueskaml.opam  bsky_ml.opam  dune-project
base/: credential.ml  dune  types.ml  types.mli  utils.ml
car/: cbor.ml  dag_cbor.ml  dag_cbor.mli  dune
car/test/: cid.ml  dune  leb128.ml
lexicon/compiler/: compiler.ml  dune
lexicon/compiler/_lexicons/app/bsky/actor/: .#defs.json
lexicon/lib/: compile.ml  convert.ml  dune  tree.ml  tree.mli  types.ml  types.mli  types2.ml  types2.mli  utils.ml
poc/: README.md  dune  xrpc.ml
poc/demo/: car_decode.ml  demo.ml  dune  subscribe.ml
poc/test/: cid.ml  dune  leb128.ml  multibase_test.ml
poc/unix/: dune  event.ml  event.mli
scripts/: codegen.sh
src/: .gitignore  aturi.ml  aturi.mli  blueskaml.ml  blueskaml.mli  bsky_ml.ml  car.ml  car.mli  cbor.mli  credential.ml  credential.mli  dag_cbor.ml  dag_cbor.mli  did.ml  did.mli  dune  handle.ml  handle.mli  leb128.ml  leb128.mli  lexicon.ml  like.ml  nsid.ml  nsid.mli  parserM.ml  post.ml  search.ml  types.ml  types.mli  utils.ml  xrpc.ml  xrpc_base.ml
src/demo/: README.md  car_decode.ml  demo.ml  dune  subscribe.ml
src/test/: cid.ml  dune  leb128.ml
src/unix/: dune  event.ml  event.mli  subscription.ml
src/unix/demo/: dune  subscribe.ml
