(library
 (name bsky_ml_poc)
 (public_name bsky_ml.poc)
 (flags :standard
   -open Bsky_ml_base
   -open Ppx_yojson_conv_lib.Yojson_conv
 )
 (libraries
    bsky_ml.base
    lwt_ssl
    cohttp
    cohttp-lwt
    yojson
    ptime.clock.os
    hex
    cbor
    websocket-lwt-unix
    multibase
    )
 (preprocess (pps ppx_yojson_conv)))
