(library
 (name blueskaml)
 (public_name blueskaml)
 (flags :standard -w -30)
 (libraries
  yojson
  ppx_yojson_conv_lib
  blueskaml.base

  lwt_ssl
  cohttp
  cohttp-lwt
  ptime.clock.os
  hex
  multibase
)
 (preprocess (pps ppx_yojson_conv))
)

; (rule
;   (targets lexicon.ml xrpc.ml)
;   (deps (:gen ../lexicon/compiler/compiler.exe))
;   (action (run %{gen} ../lexicon/compiler/_lexicons)))

