(library
 (name bsky_ml)
 (public_name bsky_ml)
 (flags :standard -w -30
   -open Ppx_yojson_conv_lib.Yojson_conv
 )
 (libraries
  yojson
  ppx_yojson_conv_lib
  bsky_ml.base

  lwt_ssl
  cohttp
  cohttp-lwt
  ptime.clock.os
  hex
  multibase
)
 (preprocess (pps ppx_yojson_conv))
)

; (rule
;   (targets lexicon.ml xrpc.ml)
;   (deps (:gen ../lexicon/compiler/compiler.exe))
;   (action (run %{gen} ../lexicon/compiler/_lexicons)))

