(executables
 (names demo)
 (modules demo)
 (flags :standard)
 (libraries
  bsky_ml.base
  bsky_ml.car
  bsky_ml.poc
  cohttp-lwt-unix))

(executables
 (names subscribe)
 (modules subscribe)
 (flags :standard)
 (libraries
  bsky_ml.base
  bsky_ml.car
  bsky_ml.poc.unix
  ))

(executables
 (names car_decode)
 (modules car_decode)
 (flags :standard)
 (libraries
  bsky_ml.base
  bsky_ml.car
  bsky_ml.poc
  websocket-lwt-unix
  cohttp-lwt-unix
  cbor
  ))
